--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-
 Spring.resources.static-locations= classpath:/
+github.client.id=5eb6bc4348f2f4d9f56f
+github.client.secret=b4f71fedf38addec16db929e5beed474fd9972c2
+github.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.url=jdbc:mysql:///community
+spring.datasource.username=root
+spring.datasource.password=140605
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
