--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:mysql:///community
 spring.datasource.username=root
 spring.datasource.password=140605
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
