--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-Spring.resources.static-locations= classpath:/
+spring.mvc.static-path-pattern=/static/**
 github.client.id=5eb6bc4348f2f4d9f56f
 github.client.secret=b4f71fedf38addec16db929e5beed474fd9972c2
 github.redirect.uri=http://localhost:8080/callback
