--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=140605
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.xiao.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
