--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.xiao.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+logging.file=logs/community.log
+logging.level.root=info
+logging.level.com.xiao.community.mapper=debug
+logging.file.max-size=100MB
+logging.file.max-history=15
